--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body>
     
-    <img class="image grow" alt="main image" src="/img/gold.jpg">
+    <img class="image grow" alt="main image" src="/img/guts.WebP">
 
     
     <div class="content-container">
    
     <div class="header-container">
-        <h1>Welcome, Ameer</h1>
+        <h1>Welcome, Nafi</h1>
         <div class="status-strip">
             <span class="date"></span>
             <span> | </span>
