--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <span class="date"></span>
             <span> | </span>
             <span class="time"></span>
-            <span> | </span>
-            <span class="weather"></span>
+            <!-- <span> | </span>
+            <span class="weather"></span> -->
         </div>
     </div>
     
