--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
     <script src="./script/weather.js" async></script>
     <script src="./script/time.js" async></script>
     <script src="./script/themes.js" async></script>
-    <title>Welcome</title>
+    <title>Welcome Nafi</title>
 </head>
 <body>
     
     <img class="image grow" alt="main image" src="/img/guts.WebP">
-
-    
     <div class="content-container">
    
     <div class="header-container">
