--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     <div class="container">
         <h2 class="title">
             <i class="fa-solid fa-book"></i>
-            Read
+            University
         </h2>
         <div class="links"></div>
-            <a href="https://www.Goodreads.com/">Goodreads</a>
-            <a href="https://www.medium.com/">Medium</a>
+            <a href="https://elearn.daffodilvarsity.edu.bd/my/">Blc</a>
+            <a href="http://studentportal.diu.edu.bd/">Portal</a>
             <a href="https://libgen.is/">Libgen</a>
             <a href="https://www.creepypasta.com/">CreepyPasta</a>
             
