--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </h2>
         <div class="links"></div>
         <a href="https://www.github.com">Github</a>
-            <a href="https://www.codecademy.com/">Codecademy</a>
+            <a href="https://codeforces.com/">CodeForces</a>
             <a href="https://developer.mozilla.org/en-US/">MDN Docs</a>
             <a href="https://Javascript.info/">Javascript.info</a>
             
